PRM-3162 updated html for link

--- a/app/views/findOutHowToAppeal/AppealAfterPaymentPlanProcessedPage.scala.html
+++ b/app/views/findOutHowToAppeal/AppealAfterPaymentPlanProcessedPage.scala.html
@@ -31,8 +31,11 @@
 
     <p class="govuk-body">@messages("paymentPlanProcessed.p1")</p>
 
-<a class="govuk-link" href="@{appConfig.vatOverviewUrl}" id="view-vat-account-link">
-    @messages("appealConfirmation.returnToVatVc")
-
-</a>
+<p class="govuk-body">
+    <a class="govuk-link" href="@{
+            appConfig.vatOverviewUrl
+        }" id="view-vat-account-link">
+        @messages("appealConfirmation.returnToVatVc")
+    </a>
+</p>
 }
