PRM-3154 removed second h1 due to accessibility issue

--- a/app/views/findOutHowToAppeal/AppealAfterPaymentPlanSetUpPage.scala.html
+++ b/app/views/findOutHowToAppeal/AppealAfterPaymentPlanSetUpPage.scala.html
@@ -41,7 +41,7 @@
                 legendContent = messages("paymentPlanSetUp.legendHeadingAndTitle"),
                 items = radioOptions,
                 legendClasses = "govuk-fieldset__legend govuk-fieldset__legend--m",
-                legendAsPageHeading = true,
+                legendAsPageHeading = false,
                 hint = None,
                 legendId = "radio-heading"
             )
