--- a/app/views/findOutHowToAppeal/AppealAfterVATIsPaidPage.scala.html
+++ b/app/views/findOutHowToAppeal/AppealAfterVATIsPaidPage.scala.html
@@ -44,7 +44,7 @@
             legendContent = messages("payYourVAT.radioHeading"),
             items = radioOptions,
             legendClasses = "govuk-fieldset__legend govuk-fieldset__legend--m",
-            legendAsPageHeading = true,
+            legendAsPageHeading = false,
             legendId = "radio-heading"
         )
 
