--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -23,25 +23,24 @@
         formHelper: FormWithCSRF,
         pageHeader: components.pageHeader)
 
-@(reasonableExcuse: String, reasonText: String, friendlyDueDate: String, friendlyStartDate: String, friendlyEndDate: String, extraBullets: Seq[String], isObligationAppeal: Boolean = false, pageMode: PageMode)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
+@(reasonableExcuse: String, reasonText: String, friendlyDueDate: String, friendlyStartDate: String, friendlyEndDate: String, extraBullets: Seq[String], pageMode: PageMode)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
 
-@appealType = @{userRequest.answers.getAnswer[PenaltyTypeEnum.Value](SessionKeys.appealType)}
+    @appealType = @{
+        userRequest.answers.getAnswer[PenaltyTypeEnum.Value](SessionKeys.appealType)
+    }
 
-@layout(pageTitle = messages("honestyDeclaration.headingAndTitle"),
-    isPageFullWidth = false,
-    optPageMode = Some(pageMode)) {
+    @layout(pageTitle = messages("honestyDeclaration.headingAndTitle"),
+        isPageFullWidth = false,
+        optPageMode = Some(pageMode)) {
 
-    @pageHeader(Some(messages("honestyDeclaration.headingAndTitle")))
-    <p class="govuk-body">@messages("honestyDeclaration.p1")</p>
-    <ul class="govuk-list govuk-list--bullet">
-        <li>
-            @if(!reasonText.equals("") && !isObligationAppeal) {
-                @messages("honestyDeclaration.li.1.1", reasonText)
-            } else if(isObligationAppeal) {
-                @messages("honestyDeclaration.obligation.li.1")
-            }
+        @pageHeader(Some(messages("honestyDeclaration.headingAndTitle")))
+        <p class="govuk-body">@messages("honestyDeclaration.p1")</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>
+                @if(!reasonText.equals("")) {
+                    @messages("honestyDeclaration.li.1.1", reasonText)
+                }
 
-            @if(!isObligationAppeal) {
                 @if(appealType.contains(PenaltyTypeEnum.Late_Payment) || appealType.contains(PenaltyTypeEnum.Additional)) {
                     @if(userRequest.isAgent) {
                         @if(reasonableExcuse.equals("crime") || reasonableExcuse.equals("bereavement")) {
@@ -54,7 +53,7 @@
                     }
                 } else {
                     @if(userRequest.isAgent) {
-                        @if(userRequest.answers.getAnswer[String](SessionKeys.whoPlannedToSubmitVATReturn).contains("agent")){
+                        @if(userRequest.answers.getAnswer[String](SessionKeys.whoPlannedToSubmitVATReturn).contains("agent")) {
                             @messages("honestyDeclaration.li.1.2", friendlyDueDate)
                         } else {
                             @if(reasonableExcuse.equals("crime") || reasonableExcuse.equals("bereavement")) {
@@ -67,46 +66,39 @@
                         @messages("honestyDeclaration.li.1.2", friendlyDueDate)
                     }
                 }
-            }
-        </li>
-        @extraBullets.map { bullet =>
-            <li>
-                @messages(bullet)
             </li>
-        }
-        <li>
-            @if(isObligationAppeal) {
-                @if(appealType.contains(PenaltyTypeEnum.Late_Payment) || appealType.contains(PenaltyTypeEnum.Additional)) {
-                    @messages("honestyDeclaration.obligation.lpp.li.2", friendlyStartDate, friendlyEndDate)
-                } else {
-                    @messages("honestyDeclaration.obligation.li.2", friendlyStartDate, friendlyEndDate)
-                }
-            } else if(userRequest.isAgent && userRequest.answers.getAnswer[String](SessionKeys.whoPlannedToSubmitVATReturn).contains("agent") && userRequest.answers.getAnswer[String](SessionKeys.whatCausedYouToMissTheDeadline).contains("client")) {
-                @messages("agent.honestyDeclaration.li.2.extra")
-            } else if(reasonableExcuse.equals("lossOfStaff")) {
+            @extraBullets.map { bullet =>
+                <li>
+                    @messages(bullet)
+                </li>
+            }
+            <li>
+                @if(userRequest.isAgent && userRequest.answers.getAnswer[String](SessionKeys.whoPlannedToSubmitVATReturn).contains("agent") && userRequest.answers.getAnswer[String](SessionKeys.whatCausedYouToMissTheDeadline).contains("client")) {
+                    @messages("agent.honestyDeclaration.li.2.extra")
+                } else if(reasonableExcuse.equals("lossOfStaff")) {
                 @if(appealType.contains(PenaltyTypeEnum.Late_Payment) || appealType.contains(PenaltyTypeEnum.Additional)) {
                     @messages("honestyDeclaration.lossOfStaff.lpp.li.2")
                 } else {
                     @messages("honestyDeclaration.lossOfStaff.li.2")
                 }
-            } else if(appealType.contains(PenaltyTypeEnum.Late_Payment) || appealType.contains(PenaltyTypeEnum.Additional)) {
+                } else if(appealType.contains(PenaltyTypeEnum.Late_Payment) || appealType.contains(PenaltyTypeEnum.Additional)) {
                 @getMessage("honestyDeclaration.lpp.li.2")
-            } else {
+                } else {
                 @getMessage("honestyDeclaration.li.2")
-            }
-        </li>
-        @if((appealType.contains(PenaltyTypeEnum.Late_Payment) || appealType.contains(PenaltyTypeEnum.Additional)) && userRequest.answers.getAnswer[String](SessionKeys.reasonableExcuse).contains("technicalIssues")) {
-            <li>
-            @messages("honestyDeclaration.li.extra.technicalIssues")
+                }
             </li>
+            @if((appealType.contains(PenaltyTypeEnum.Late_Payment) || appealType.contains(PenaltyTypeEnum.Additional)) && userRequest.answers.getAnswer[String](SessionKeys.reasonableExcuse).contains("technicalIssues")) {
+                <li>
+                @messages("honestyDeclaration.li.extra.technicalIssues")
+                </li>
+            }
+
+            <li>
+            @messages("honestyDeclaration.li.3")
+            </li>
+        </ul>
+
+        @formHelper(action = controllers.routes.HonestyDeclarationController.onSubmit()) {
+            @button("common.acceptAndContinue")
         }
-
-        <li>
-        @messages("honestyDeclaration.li.3")
-        </li>
-    </ul>
-
-    @formHelper(action = controllers.routes.HonestyDeclarationController.onSubmit()) {
-        @button("common.acceptAndContinue")
     }
-}
