--- a/app/views/findOutHowToAppeal/AppealByLetterKickOutPage.scala.html
+++ b/app/views/findOutHowToAppeal/AppealByLetterKickOutPage.scala.html
@@ -15,7 +15,6 @@
  *@
 
 @import config.AppConfig
-@import config.featureSwitches.ShowFindOutHowToAppealLSPJourney
 
 @this(layout: Layout,
         bullets: components.bullets,
@@ -40,12 +39,11 @@
   @bullets(
     Seq(
       Html(messages("appealByLetter.li.1.1")),
-      if(appConfig.isEnabled(ShowFindOutHowToAppealLSPJourney)) Html(messages("appealByLetter.li.lsp.1.2")) else Html(messages("appealByLetter.li.1.2")),
-      if(appConfig.isEnabled(ShowFindOutHowToAppealLSPJourney)) Html(messages("appealByLetter.li.lsp.1.3")) else Html(messages("appealByLetter.li.1.3"))
+      Html(messages("appealByLetter.li.lsp.1.2")),
+      Html(messages("appealByLetter.li.lsp.1.3"))
     )
   )
 
-  @if(!appConfig.isEnabled(ShowFindOutHowToAppealLSPJourney)) {
     <p class="govuk-body">@messages("appealByLetter.p2")</p>
     @bullets(
       Seq(
@@ -53,9 +51,7 @@
         Html(messages("appealByLetter.li.2.2"))
       )
     )
-  }
 
-  @if(appConfig.isEnabled(ShowFindOutHowToAppealLSPJourney)) {
     <div class="govuk-!-margin-bottom-3" id="address">
       @addressContent
     </div>
@@ -63,7 +59,6 @@
     <div class="govuk-inset-text">
       @addressContent
     </div>
-  }
 
   <p class="govuk-body">
     <a class="govuk-link" href="@{
