--- a/app/views/errors/InternalServerErrorGenericPage.scala.html
+++ b/app/views/errors/InternalServerErrorGenericPage.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2024 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,25 +12,14 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package controllers
+@this(layout: Layout)
 
-import base.SpecBase
-import views.html.errors.InternalServerErrorPage
-import play.api.test.Helpers._
+@()(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-class InternalServerErrorControllerSpec extends SpecBase {
-
-  val internalServerErrorPage = injector.instanceOf[InternalServerErrorPage]
-
-  val controller = new InternalServerErrorController(
-    internalServerErrorPage
-  )(mcc, appConfig)
-
-  "onPageLoad" should {
-    "show the page with a 500 status code (INTERNAL_SERVER_ERROR)" in {
-      status(controller.onPageLoad()(userRequestWithCorrectKeys)) shouldBe INTERNAL_SERVER_ERROR
-    }
-  }
+@layout(pageTitle = messages("global.error.InternalServerError500.title"), backLinkEnabled = false, isAuthorised = false, showSignOut = false) {
+<h1 class="govuk-heading-l" id="page-heading">@messages("global.error.InternalServerError500.heading")</h1>
+<p class="govuk-body">@messages("global.error.InternalServerError500.message")</p>
+<p class="govuk-body"><a class="govuk-link" href="@{appConfig.penaltiesFrontendUrl}">@messages("internalServerError.link.generic")</a></p>
 }
