[PRM-3167] Updated custom ISE code to be in line with other frontend (#553)

--- a/app/views/errors/InternalServerErrorPage.scala.html
+++ b/app/views/errors/InternalServerErrorPage.scala.html
@@ -14,19 +14,18 @@
  * limitations under the License.
  *@
 
-@this(layout: Layout, link: components.link)
+@this(layout: Layout)
 
-@()(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@()(implicit request: Request[_], messages: Messages, appConfig: AppConfig, user: UserRequest[_])
 
 @layout(pageTitle = messages("global.error.InternalServerError500.title"), backLinkEnabled = false, isAuthorised = false, showSignOut = false) {
 <h1 class="govuk-heading-l" id="page-heading">@messages("global.error.InternalServerError500.heading")</h1>
 <p class="govuk-body">@messages("global.error.InternalServerError500.message")</p>
-<p class="govuk-body">
-    @link(
-    link = appConfig.penaltiesFrontendUrl,
-    messageKey = "internalServerError.link",
-    button = false,
-    id = Some("penalties-link")
-    )
-</p>
+<p class="govuk-body"><a class="govuk-link" href="@{appConfig.penaltiesFrontendUrl}">
+ @if(user.isAgent) {
+  @messages("agent.internalServerError.link")
+ } else {
+  @messages("internalServerError.link")
+ }
+</a></p>
 }
