--- a/app/views/ReasonableExcuseSelectionPage.scala.html
+++ b/app/views/ReasonableExcuseSelectionPage.scala.html
@@ -28,8 +28,10 @@
 
 @(form: Form[_], radioOptions: Seq[RadioItem], pageMode: PageMode, isAgentHintText: Boolean, showHintText: Boolean)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = if(userRequest.isAgent && userRequest.answers.getAnswer[PenaltyTypeEnum.Value](SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Submission)){
-        messages("agent.reasonableExcuses.headingAndTitle")}else{messages("reasonableExcuses.headingAndTitle")
+@layout(pageTitle = if(userRequest.isAgent && userRequest.answers.getAnswer[PenaltyTypeEnum.Value](SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Submission)) {
+        messages("agent.reasonableExcuses.headingAndTitle")
+    } else {
+        messages("reasonableExcuses.headingAndTitle")
     },
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
@@ -40,7 +42,11 @@
 
         @radios(
           form = form,
-          legendContent = if(userRequest.isAgent && userRequest.answers.getAnswer[PenaltyTypeEnum.Value](SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Submission)){messages("agent.reasonableExcuses.headingAndTitle")}else{messages("reasonableExcuses.headingAndTitle")},
+          legendContent = if(userRequest.isAgent && userRequest.answers.getAnswer[PenaltyTypeEnum.Value](SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Submission)) {
+              messages("agent.reasonableExcuses.headingAndTitle")
+          } else {
+              messages("reasonableExcuses.headingAndTitle")
+          },
           items = radioOptions,
           legendClasses = "govuk-fieldset__legend--l",
           legendAsPageHeading = true,
